# Stop-Family

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
src/: admin.rs  d.c  filesystem.rs  is_elevated.rs  kill.rs  main.rs  perms.rs  registry.rs  scheduled_tasks.rs  tasks.rs
