[package]
name = "stop-family"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.37", features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_TaskScheduler",
    "Win32_Security",
] }
const_format = "0.2"


[build-dependencies]
embed-manifest = "1.3"

[profile.release]
lto = true
strip = true
