[package]
name = "stop-family"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.38", features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_TaskScheduler",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Globalization",
] }
bin = { path = "bin", artifact = "bin" }


[build-dependencies]
embed-manifest = "1.3"

[profile.release]
lto = true
strip = true


[workspace]
members = ["bin"]
